--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("https://images.unsplash.com/photo-1589218909732-f304d13fbf2c?ixlib=rb-1.2.1&ixid=MnwxMjA3fDB8MHxleHBsb3JlLWZlZWR8M3x8fGVufDB8fHx8&auto=format&fit=crop&w=600&q=60");
+    background-image: url("https://unsplash.com/photos/Xaanw0s0pMk");
     background-size: cover;
     background-position: center center;
     display: flex;
