--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@
 }
 
 body {
-    background-image: url("https://unsplash.com/photos/Xaanw0s0pMk");
+    background-image: url("https://thumbs.dreamstime.com/b/happy-birthday-cupcake-celebration-message-160558421.jpg");
     background-size: cover;
     background-position: center center;
     display: flex;
