--- a/style.css
+++ b/style.css
@@ -10,7 +10,7 @@ body {
     background-position: center center;
     display: flex;
     flex-direction: column;
-    align-items: center;
+    align-items: left;
     min-height: 100vh;
     font-family: "Poppins", sans-serif;
     margin: 0;
