--- a/style.css
+++ b/style.css
@@ -20,7 +20,7 @@ h1 {
     font-weight: normal;
     font-size: 4rem;
     margin-top: 10rem;
-    color: rgb(221, 21, 21);
+    color: rgb(128,128,128);
 }
 
 .countdown-container {
@@ -28,7 +28,7 @@ h1 {
     flex-wrap: wrap;
     justify-content: center;
     /* color: white; */
-    color: rgb(221, 21, 21);
+    color: rgb(128,128,128);
 
 }
 
